@@ -25,3 +25,4 @@ Dist::Zilla::PluginBundle::Classic = 0
 Dist::Zilla::PluginBundle::Filter = 0
 Dist::Zilla::PluginBundle::Git = 1.101230
 Pod::Elemental::Transformer::List = 0
+Dist::Zilla::Plugin::TaskWeaver = 0.093330
